configure seo, assets and test configuration for end to end tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/.idea/
-/.vscode/
-/cypress/screenshots/
-/cypress/videos/
-/node_modules/
+.DS_Store
+.idea
+.vscode
+cypress/screenshots
+cypress/videos
+node_modules
