--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
   "author": "adrianpothuaud <adrianpothuaud@protonmail.com>",
   "license": "MIT",
   "scripts": {
-    "start:dev": "live-server",
+    "start": "node start.js",
+    "start:e2e": "node e2eStart.js",
     "lint": "eslint . --color --ext .js",
     "lint:fix": "eslint . --color --ext .js --fix",
     "cypress": "cypress open",
     "cypress:headless": "cypress run",
-    "e2e": "start-server-and-test start:dev http://localhost:8080 cypress",
-    "e2e:headless": "start-server-and-test start:dev http://localhost:8080 cypress:headless"
+    "e2e": "start-server-and-test start:e2e http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test start:e2e http://localhost:3000 cypress:headless"
   },
   "devDependencies": {
     "cypress": "^9.5.3",
     "eslint": "^8.12.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "start-server-and-test": "^1.14.0"
   }
 }
